--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.0
+  fluttertoast: ^8.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
